--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -11,35 +11,37 @@
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
     <!-- TODO #1 - Use a loop to display job results in a table. -->
-    <th:block>
-        <table class="job-listing" th:each = "item : ${jobs}">
-            <tr>
-                <td>ID</td>
-                <td th:text = "${item.id}"></td>
-            </tr>
-            <tr>
-                <td>Name</td>
-                <td th:text = "${item.name}"></td>
-            </tr>
-            <tr>
-                <td>Employer</td>
-                <td th:text = "${item.employer}"></td>
-            </tr>
-            <tr>
-                <td>Location</td>
-                <td th:text = "${item.location}"></td>
-            </tr>
-            <tr>
-                <td>Position Type</td>
-                <td th:text = "${item.positionType}"></td>
-            </tr>
-            <tr>
-                <td>Core Competency</td>
-                <td th:text = "${item.coreCompetency}"></td>
-            </tr>
-        </table>
-
-    </th:block>
+    <div th:replace = "fragments :: jobListing"></div>
+<!--    <div th:fragment = "jobListing">-->
+<!--    <th:block>-->
+<!--        <table class="job-listing" th:each = "item : ${jobs}">-->
+<!--            <tr>-->
+<!--                <td>ID</td>-->
+<!--                <td th:text = "${item.id}"></td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--                <td>Name</td>-->
+<!--                <td th:text = "${item.name}"></td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--                <td>Employer</td>-->
+<!--                <td th:text = "${item.employer}"></td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--                <td>Location</td>-->
+<!--                <td th:text = "${item.location}"></td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--                <td>Position Type</td>-->
+<!--                <td th:text = "${item.positionType}"></td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--                <td>Core Competency</td>-->
+<!--                <td th:text = "${item.coreCompetency}"></td>-->
+<!--            </tr>-->
+<!--        </table>-->
+<!--    </th:block>-->
+<!--    </div>-->
 
 </div>
 
